# matlabdomain

./: .buildinfo  .coveragerc  .gitignore  BUGS_QUICK_REFERENCE.md  BUG_FIXES_SUMMARY.md  BUG_HUNTING_RESULTS.md  DEVELOPER_GUIDE.md  DOCUMENTATION_SUMMARY.txt  IMPLEMENTATION_GUIDE.md  ONBOARDING.md  QUICK_REFERENCE.md  README.rst  SPHINX_DOCS_PLAN.md  SPHINX_MATLAB_APIDOC.md  TEST_PROJECTS_SUMMARY.md  UV_MIGRATION.md  dev-requirements.txt  genindex.html  index.html  objects.inv  pyproject.toml  pytest.ini  rtd-requirements.txt  search.html  searchindex.js  setup.py  sphinx_matlab_apidoc.py  tox.ini  windows-diagnostic-output.txt  windows-test-full.txt  windows-test-parse-mfile.txt
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: global_namespace.doctree  index.doctree  mypackage.doctree
.doctrees/developer-guide/: architecture.doctree  contributing.doctree  known-issues.doctree  quick-reference.doctree  testing.doctree
.doctrees/getting-started/: first-project.doctree  installation.doctree  quick-start.doctree
.doctrees/reference/: api.doctree  changelog.doctree  configuration-options.doctree  directives.doctree
.doctrees/user-guide/: autodoc-directives.doctree  configuration.doctree  cross-referencing.doctree  examples.doctree  matlab-domain.doctree  napoleon-docstrings.doctree  sphinx-matlab-apidoc.doctree  troubleshooting.doctree
.github/workflows/: docs.yml  python-package.yml
DEVELOPER_DOCS/: CI_AND_PLATFORM_FIXES.md  DEVELOPER_GUIDE.md  DOCS_INDEX.md  DOCUMENTATION_SUMMARY.txt  IMPLEMENTATION_GUIDE.md  ONBOARDING.md  README.md  SPHINX_DOCS_PLAN.md  UV_MIGRATION.md  WINDOWS_TESTING_CHECKLIST.md  test_paths_windows.py
DEVELOPER_DOCS/Resolved/: WINDOWS_TESTING_GUIDE.md
_sources/: index.rst.txt
_sources/developer-guide/: known-issues.rst.txt  quick-reference.rst.txt  testing.rst.txt
_sources/getting-started/: first-project.rst.txt  installation.rst.txt  quick-start.rst.txt
_sources/reference/: api.rst.txt
_sources/user-guide/: autodoc-directives.rst.txt  cross-referencing.rst.txt  matlab-domain.rst.txt  napoleon-docstrings.rst.txt
api/: global_namespace.html  index.html  mypackage.html
developer-guide/: architecture.html  contributing.html  known-issues.html  quick-reference.html  testing.html
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/: global_namespace.rst  index.rst  mypackage.rst
docs/developer-guide/: architecture.rst  contributing.rst  quick-reference.rst  testing.rst
docs/getting-started/: first-project.rst  quick-start.rst
docs/reference/: changelog.rst  configuration-options.rst  directives.rst
docs/src/: Calculator.m  hello.m
docs/user-guide/: configuration.rst  examples.rst  sphinx-matlab-apidoc.rst  (+1 more)
getting-started/: first-project.html  installation.html  quick-start.html
reference/: api.html  changelog.html  configuration-options.html  directives.html
sphinxcontrib/: mat_documenters.py  mat_tree_sitter_parser.py  mat_types.py  sphinx_matlab_apidoc.py  todo.md
test_slow/: .gitignore  README.md  conftest.py  project_data.json  run_tests.sh  test_integration.py
tests/: test_matlabify.py  test_parse_mfile.py  test_sphinx_matlab_apidoc.py
user-guide/: autodoc-directives.html  configuration.html  cross-referencing.html  examples.html  matlab-domain.html  napoleon-docstrings.html  sphinx-matlab-apidoc.html  troubleshooting.html
(+2 files in other folders)
