[build-system]
requires = ["setuptools>=40.8.0", "setuptools_scm<6.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxcontrib-matlabdomain"
description = 'Sphinx "matlabdomain" extension'
readme = "README.rst"
requires-python = ">=3.10.0"
license = {text = "BSD"}
authors = [
    {name = "Jørgen Cederberg", email = "jorgen@cederberg.be"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx :: Domain",
]
dependencies = [
    "Sphinx>=7.0.0",
    "tree-sitter-matlab>=1.0.2,<1.0.5",
    "tree-sitter>=0.21.3,<0.23.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/sphinx-contrib/matlabdomain"
Download = "http://pypi.python.org/pypi/sphinxcontrib-matlabdomain"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "defusedxml>=0.7.1",
    "sphinxcontrib-napoleon",
]
rtd = [
    "sphinx_rtd_theme",
    "sphinxcontrib-napoleon",
]

[tool.setuptools_scm]

[tool.setuptools]
namespace-packages = ["sphinxcontrib"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sphinxcontrib*"]

[tool.ruff]
include = [
    "tests/**/*.py",
    "sphinxcontrib/**/*.py",
    "doc/**/*.py"
]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
"D203",
"E203",
"PERF203",
"PERF401",
"PERF403",
"RUF001",
"RUF012",
"SIM102",
]
# List of all the ruff rules (includes why the rule matters)
# https://docs.astral.sh/ruff/rules/
select = [
    "C",
    "C4",
    "E9",
    "F63",
    "F7",
    "F82",
    "FLY",
    "I",
    "PERF",
    "RUF",
    "SIM",
    "W"
]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 51

[tool.codespell]
builtin = "clear,rare"
ignore-words = ".github/codespell_ignore_words.txt"
skip = "./.git"


[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --show-capture=all --showlocals -s -vv --cov=sphinxcontrib --cov=tests --cov-report=term"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
junit_family = "xunit2"
log_cli_level = "INFO"
xfail_strict = true

[tool.coverage.run]
branch = true
omit = [
    '*/_build/*',
    'sphinxcontrib/__init__.py',
]


# Please update the GitHub Actions workflow if you change the envlist here
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{310,311,312,313,314}-sphinx{70,latest}

[testenv]
passenv =
    USERNAME
    PY_COLORS
    FORCE_COLOR
    NO_COLOR
    CLICOLOR
    CLICOLOR_FORCE
deps =
    pytest
    pytest-cov
    defusedxml
    sphinx70: Sphinx>=7.0,<8.0
    sphinxlatest: Sphinx
    sphinxdev: https://github.com/sphinx-doc/sphinx/archive/refs/heads/master.zip
commands =
    pytest {posargs}
    sphinx-build -b html -d {envtmpdir}/doctrees tests/test_docs {envtmpdir}/html
"""

